--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europ
 spring.datasource.username=kodilla
 spring.datasource.password=kodilla123
 
-spring.jpa.database=mysql
+spring.jpa.database=PostgreSQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
