--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 #localhost#
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=kodilla
-spring.datasource.password=kodilla123
-spring.jpa.show-sql=true
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+#spring.datasource.username=kodilla
+#spring.datasource.password=kodilla123
+#spring.jpa.show-sql=true
 
 #independent#
 spring.jpa.hibernate.ddl-auto=update
 
 #Heroku#
-#spring.jpa.database=postgresql
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.database=postgresql
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=7499d6301cdcfd40e43592c79263f565
