--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,23 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 admin.mail=test.dev.app.email@gmail.com
 
+# ACTUATOR INFO
+info.app.name=Tasks Application
+info.app.description=Application has been created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=Adam
+info.app.owner.surname=Doe
+info.app.administrator.email=john.doe@test.com
+info.app.administrator.adress.street=Super Cool Street
+info.app.administrator.adress.number=42
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to  make world a better place!
+info.company.email=tasks@crud.com
+info.company.phone=744489230
+
+
+management.endpoints.web.exposure.include=*
+
 
 
 
