--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,8 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#ADMINISTRATION
+admin.name=Kodilla Admin
 admin.mail=test.dev.app.email@gmail.com
 
 # ACTUATOR INFO
